--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -39,12 +39,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # Using ubuntu-22.04 instead of 24.04 for more compatibility (glibc). Ideally we'd use the
+        # Using ubuntu-20.04 instead of 22.04 for more compatibility (glibc). Ideally we'd use the
         # manylinux docker image, but I haven't figured out how to install CUDA on manylinux.
         os: [ ubuntu-22.04, ubuntu-22.04-arm ]
         python-version: [ '3.9', '3.10', '3.11', '3.12', '3.13' ]
         torch-version: [ '2.4.0', '2.5.1', '2.6.0', '2.7.0' ]
-        cuda-version: [ '12.4.1', '12.8.1' ]
+        cuda-version: [ '12.8.1' ]
         # We need separate wheels that either uses C++11 ABI (-D_GLIBCXX_USE_CXX11_ABI) or not.
         # Pytorch wheels currently don't use it, but nvcr images have Pytorch compiled with C++11 ABI.
         # Without this we get import error (undefined symbol: _ZN3c105ErrorC2ENS_14SourceLocationESs)
@@ -53,21 +53,8 @@ jobs:
         exclude:
           # see https://github.com/pytorch/pytorch/blob/main/RELEASE.md#release-compatibility-matrix
           # Pytorch < 2.5 does not support Python 3.13
-          # PyTorch < 2.5 doesn’t support Python 3.13
           - torch-version: '2.4.0'
             python-version: '3.13'
-
-          # PyTorch 2.7.0 must only use CUDA 12.8.1
-          - torch-version: '2.7.0'
-            cuda-version: '12.4.1'
-
-          # All other PyTorch (< 2.7.0) must only use CUDA 12.4.1
-          - torch-version: '2.4.0'
-            cuda-version: '12.8.1'
-          - torch-version: '2.5.1'
-            cuda-version: '12.8.1'
-          - torch-version: '2.6.0'
-            cuda-version: '12.8.1'
 
     steps:
       - name: Checkout
